syntax = "proto3";

package cloudconsole;

option go_package = "github.com/sg4i/cloud-console/proto";

import "google/api/annotations.proto";

service ConsoleService {
  rpc GenerateRoleLoginURL (GenerateRoleLoginURLRequest) returns (GenerateRoleLoginURLResponse) {
    option (google.api.http) = {
      post: "/v1/role_login"
      body: "*"
    };
  }
}

message GenerateRoleLoginURLRequest {
  string provider = 1;
  string secret_id = 2;
  string secret_key = 3;
  optional string token = 4;
  optional string role_arn = 5;
  optional string desiontion = 6;
  optional string login_url = 7;
}

message GenerateRoleLoginURLResponse {
  string url = 1;
}